added the homepage url

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "myportfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Pourush1.github.io/MyPortfolio",
+  "homepage": " https://thaparahul.github.io/MyPortfolio/",
   "dependencies": {
     "gh-pages": "^2.1.1",
     "react": "^16.12.0",
